fixed article issue where text would overflow outside of the article / fixed input to clear after valid submission

--- a/public/styles/article.css
+++ b/public/styles/article.css
@@ -40,6 +40,9 @@ article:hover{
   width:65px;
   height:65px;
 }
+.content{
+  overflow-wrap: break-word;
+}
 footer{
   font-size:16px;
   font-weight: 300;
